--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "build": "yarn build-less && react-scripts build",
-    "build-less": "lessc --js --rewrite-urls=all --include-path=node_modules src/app/styles/main.less src/app/styles/main.css",
+    "build": "yarn less:build && react-scripts build",
     "eject": "react-scripts eject",
     "format": "prettier --write '**/*.{js,json,less,md}'",
     "extract-translations": "i18next-scanner --config i18next-scanner.config.js 'src/**/*.js'",
+    "less:build": "lessc --js --rewrite-urls=all --include-path=node_modules src/app/styles/main.less src/app/styles/main.css",
+    "less:watch": "yarn less:build && nodemon -e less -x \"yarn less:build\"",
     "lint": "node ./node_modules/eslint/bin/eslint.js '**/*.js'",
-    "start": "npm-run-all -p watch-less start-js",
+    "start": "npm-run-all -p less:watch start-js",
     "start-js": "react-scripts start",
-    "storybook": "npm-run-all -p storybook:start watch-less",
+    "storybook": "npm-run-all -p storybook:start less:watch",
     "storybook:start": "start-storybook -p 9001 -s public -c storybook",
     "storybook:build": "build-storybook -s public -c storybook",
-    "test": "react-scripts test --env=jsdom",
-    "watch-less": "yarn build-less && nodemon -e less -x \"yarn build-less\""
+    "test": "react-scripts test --env=jsdom"
   },
   "husky": {
     "hooks": {
