set baseUrl to use absolute imports

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
+    "baseUrl": "src",
     "target": "ES6"
   },
-  "include": ["src/**/*", "storybook/**/*"]
+  "include": ["src", "storybook"]
 }
