--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,16 @@
 Thumbs.db
 
 # Node
-node_modules/
+/node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Build
-build/
+# Testing
+/coverage
+
+# Production
+/build
 
 # ENV variables
 .env
