fix slow pre-commit hook

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
       "git add"
     ],
     "*.{js,json,less,md}": [
-      "yarn format",
+      "prettier --write",
       "git add"
     ]
   },
