--- a/package.json
+++ b/package.json
@@ -65,8 +65,11 @@
     "@types/react-responsive": "3.0.3",
     "@types/react-router-dom": "4.3.4",
     "@types/redux-auth-wrapper": "^2.0.9",
+    "@types/storybook-react-router": "^1.0.0",
+    "@types/storybook__addon-a11y": "^5.0.0",
     "@types/storybook__addon-actions": "^3.4.2",
     "@types/storybook__addon-knobs": "^5.0.0",
+    "@types/storybook__addon-viewport": "^4.1.1",
     "@types/storybook__react": "4.0.2",
     "babel-core": "6.26.3",
     "husky": "2.4.1",
