--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "yarn less:build && react-scripts build",
     "eject": "react-scripts eject",
     "format": "prettier --write '**/*.{js,ts,tsx,json,less,md}'",
-    "extract-translations": "i18next-scanner --config i18next-scanner.config.js",
+    "extract-translations": "i18next-scanner",
     "less:build": "lessc --js --rewrite-urls=all --include-path=node_modules src/app/styles/main.less src/app/styles/main.css",
     "less:watch": "yarn less:build && nodemon -e less -x \"yarn less:build\"",
     "lint": "node ./node_modules/eslint/bin/eslint.js '**/*.js'",
@@ -93,14 +93,14 @@
     "deep-freeze": "0.0.1",
     "flat": "4.1.0",
     "history": "4.9.0",
-    "i18next": "15.1.3",
+    "i18next": "17.0.3",
     "localforage": "1.7.3",
     "lodash.flattendeep": "4.4.0",
     "lodash.pick": "4.4.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-i18next": "10.11.0",
-    "react-redux": "7.0.3",
+    "react-redux": "7.1.0",
     "react-responsive": "7.0.0",
     "react-router-dom": "5.0.1",
     "redux": "4.0.1",
