--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "babel-core": "6.26.3",
     "husky": "2.4.1",
     "i18next-scanner": "2.10.2",
+    "i18next-scanner-typescript": "^1.0.3",
     "less": "3.9.0",
     "lint-staged": "8.2.1",
     "nodemon": "1.19.1",
