--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-starter",
   "version": "3.0.0",
-  "description": "Full-featured starter for React application",
+  "description": "Full-featured typescript starter for React application",
   "author": "Martin Litvaj <kamahl19@gmail.com> (http://litvaj.com)",
   "license": "MIT",
   "repository": {
@@ -90,7 +90,7 @@
   },
   "dependencies": {
     "antd": "3.19.5",
-    "axios": "0.19.0",
+    "axios": "0.18.1",
     "connected-react-router": "6.4.0",
     "deep-freeze": "0.0.1",
     "flat": "4.1.0",
