--- a/package.json
+++ b/package.json
@@ -53,11 +53,10 @@
     "@storybook/addon-viewport": "5.1.9",
     "@storybook/addons": "5.1.9",
     "@storybook/react": "5.1.9",
-    "@types/deep-freeze": "^0.1.1",
     "@types/flat": "0.0.28",
-    "@types/i18next-xhr-backend": "^1.4.2",
+    "@types/i18next-xhr-backend": "1.4.2",
     "@types/jest": "24.0.15",
-    "@types/lodash.flattendeep": "^4.4.6",
+    "@types/lodash.flattendeep": "4.4.6",
     "@types/lodash.pick": "4.4.6",
     "@types/node": "12.6.2",
     "@types/react": "16.8.23",
@@ -65,17 +64,17 @@
     "@types/react-redux": "7.1.1",
     "@types/react-responsive": "3.0.3",
     "@types/react-router-dom": "4.3.4",
-    "@types/redux-auth-wrapper": "^2.0.9",
-    "@types/storybook-react-router": "^1.0.0",
-    "@types/storybook__addon-a11y": "^5.0.0",
-    "@types/storybook__addon-actions": "^3.4.2",
-    "@types/storybook__addon-knobs": "^5.0.2",
-    "@types/storybook__addon-viewport": "^4.1.1",
+    "@types/redux-auth-wrapper": "2.0.9",
+    "@types/storybook-react-router": "1.0.0",
+    "@types/storybook__addon-a11y": "5.0.0",
+    "@types/storybook__addon-actions": "3.4.3",
+    "@types/storybook__addon-knobs": "5.0.2",
+    "@types/storybook__addon-viewport": "4.1.1",
     "@types/storybook__react": "4.0.2",
     "babel-core": "6.26.3",
     "husky": "3.0.0",
     "i18next-scanner": "2.10.2",
-    "i18next-scanner-typescript": "^1.0.3",
+    "i18next-scanner-typescript": "1.0.3",
     "less": "3.9.0",
     "lint-staged": "9.2.0",
     "nodemon": "1.19.1",
@@ -89,14 +88,13 @@
     "typescript": "3.5.3"
   },
   "dependencies": {
-    "antd": "3.20.1",
+    "antd": "3.20.2",
     "axios": "0.18.1",
-    "connected-react-router": "6.5.0",
-    "deep-freeze": "0.0.1",
+    "connected-react-router": "6.5.2",
     "flat": "4.1.0",
     "history": "4.9.0",
     "i18next": "17.0.6",
-    "i18next-xhr-backend": "^3.0.0",
+    "i18next-xhr-backend": "3.0.0",
     "localforage": "1.7.3",
     "lodash.pick": "4.4.0",
     "react": "16.8.6",
@@ -111,7 +109,7 @@
     "redux-persist": "5.10.0",
     "redux-saga": "1.0.5",
     "reselect": "4.0.0",
-    "use-react-router": "^1.0.7"
+    "use-react-router": "1.0.7"
   },
   "eslintConfig": {
     "extends": "react-app"
