--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "i18next-xhr-backend": "3.0.0",
     "localforage": "1.7.3",
     "lodash.pick": "4.4.0",
+    "oaf-react-router": "^2.0.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-i18next": "10.11.4",
