--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-starter",
-  "version": "3.0.1",
+  "version": "3.0.0",
   "description": "Full-featured typescript starter for React application",
   "author": "Martin Litvaj <kamahl19@gmail.com> (http://litvaj.com)",
   "license": "MIT",
@@ -19,7 +19,7 @@
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "build": "yarn less:build && react-scripts build",
     "eject": "react-scripts eject",
-    "format": "prettier --write '**/*.{ts,tsx,json,less,md}'",
+    "format": "prettier --write '**/*.{ts,tsx,json,less,md,html}'",
     "extract-translations": "i18next-scanner",
     "less:build": "lessc --js --rewrite-urls=all --include-path=node_modules src/app/styles/main.less src/app/styles/main.css",
     "less:watch": "yarn less:build && nodemon -e less -x \"yarn less:build\"",
@@ -41,7 +41,7 @@
       "yarn lint --fix",
       "git add"
     ],
-    "*.{ts,tsx,json,less,md}": [
+    "*.{ts,tsx,json,less,md,html}": [
       "prettier --write",
       "git add"
     ]
