--- a/package.json
+++ b/package.json
@@ -105,8 +105,7 @@
     "redux-persist": "6.0.0",
     "redux-saga": "1.1.1",
     "reselect": "4.0.0",
-    "typesafe-actions": "4.4.2",
-    "use-react-router": "1.0.7"
+    "typesafe-actions": "4.4.2"
   },
   "eslintConfig": {
     "extends": "react-app"
