#50 setup react-testing-library

--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "@storybook/addon-viewport": "5.2.6",
     "@storybook/addons": "5.2.6",
     "@storybook/react": "5.2.6",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
     "@types/classnames": "2.2.9",
     "@types/flat": "0.0.28",
     "@types/jest": "24.0.23",
