--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "url": "https://github.com/Kamahl19/react-starter/issues"
   },
   "engines": {
-    "node": ">=10.15.3",
-    "yarn": ">=1.15.2"
+    "node": ">=10",
+    "yarn": ">=1.17"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "build": "yarn less:build && react-scripts build",
     "eject": "react-scripts eject",
-    "format": "prettier --write '**/*.{ts,tsx,json,less,md,html}'",
+    "format": "prettier --write '**/*.{ts,tsx,json,less,md,html,yml,yaml}'",
+    "format-check": "prettier --check '**/*.{ts,tsx,json,less,md,html,yml,yaml}'",
     "extract-translations": "i18next-scanner",
     "less:build": "lessc --js --rewrite-urls=all --include-path=node_modules src/app/styles/main.less src/app/styles/main.css",
     "less:watch": "yarn less:build && nodemon -e less -x \"yarn less:build\"",
@@ -41,7 +42,7 @@
       "yarn lint --fix",
       "git add"
     ],
-    "*.{ts,tsx,json,less,md,html}": [
+    "*.{ts,tsx,json,less,md,html,yml,yaml}": [
       "prettier --write",
       "git add"
     ]
