--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -4,25 +4,24 @@ on: [pull_request]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    
+
     strategy:
       matrix:
-        node-version: [8.x, 10.x, 12.x]
+        node-version: [10.x, 12.x]
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: yarn install, lint, format, build, and test
-      run: |
-        yarn install
-        yarn lint
-        yarn format
-        yarn build
-        yarn test
-      env:
-        CI: true
+      - uses: actions/checkout@v1
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: yarn install, lint, format, build, and test
+        run: |
+          yarn install
+          yarn lint
+          yarn format
+          yarn build
+          yarn test
+        env:
+          CI: true
