--- a/package.json
+++ b/package.json
@@ -74,8 +74,6 @@
     "npm-run-all": "4.1.5",
     "prettier": "1.19.1",
     "react-scripts": "3.4.0",
-    "redux-immutable-state-invariant": "2.1.0",
-    "redux-logger": "3.0.6",
     "source-map-explorer": "2.3.0",
     "storybook-react-router": "1.0.8",
     "typescript": "3.7.5"
@@ -94,12 +92,15 @@
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-i18next": "11.3.3",
+    "react-promise-tracker": "^2.0.5",
     "react-redux": "7.2.0",
     "react-responsive": "8.0.3",
     "react-router-dom": "5.1.2",
     "redux": "4.0.5",
     "redux-auth-wrapper": "3.0.0",
     "redux-devtools-extension": "2.13.8",
+    "redux-immutable-state-invariant": "2.1.0",
+    "redux-logger": "3.0.6",
     "redux-persist": "6.0.0",
     "redux-saga": "1.1.3",
     "reselect": "4.0.0",
