--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "yarn": ">=1.17"
   },
   "scripts": {
-    "analyze": "source-map-explorer 'build/static/js/*.js'",
+    "analyze": "yarn build && source-map-explorer 'build/static/js/*.js'",
     "build": "yarn less:build && react-scripts build",
     "eject": "react-scripts eject",
     "format": "prettier --write '**/*.{ts,tsx,json,less,md,html,yml,yaml}'",
