--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "lint-staged": "10.0.8",
     "nodemon": "2.0.2",
     "npm-run-all": "4.1.5",
-    "prettier": "1.19.1",
+    "prettier": "2.0.0",
     "react-scripts": "3.4.1",
     "source-map-explorer": "2.4.1",
     "storybook-react-router": "1.0.8",
@@ -111,8 +111,7 @@
   },
   "prettier": {
     "printWidth": 100,
-    "singleQuote": true,
-    "trailingComma": "es5"
+    "singleQuote": true
   },
   "browserslist": {
     "production": [
