--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,26 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# OS
-.DS_Store
-
-# Node
+# dependencies
 /node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# compiled styles
+src/**/main.css
+
+# misc
+.DS_Store
+.env
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Testing
-/coverage
-
-# Production
-/build
-
-# ENV variables
-.env
-
-# Compiled styles
-src/**/main.css
-
-# IntelliJ IDEA
+# IDE
 .idea
