--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-starter",
-  "version": "4.0.0",
+  "version": "1.0.0",
   "description": "Full-featured typescript starter for React application",
   "author": "Martin Litvaj <kamahl19@gmail.com> (http://litvaj.com)",
   "license": "MIT",
@@ -53,8 +53,8 @@
     "@storybook/addons": "5.3.21",
     "@storybook/preset-create-react-app": "3.1.4",
     "@storybook/react": "5.3.21",
-    "@testing-library/jest-dom": "5.11.4",
-    "@testing-library/react": "9.5.0",
+    "@testing-library/jest-dom": "5.11.5",
+    "@testing-library/react": "11.1.0",
     "@types/classnames": "2.2.10",
     "@types/jest": "26.0.15",
     "@types/node": "14.14.2",
@@ -73,10 +73,11 @@
     "nodemon": "2.0.6",
     "npm-run-all": "4.1.5",
     "prettier": "2.1.2",
-    "react-scripts": "3.4.3",
+    "react-scripts": "4.0.0",
     "source-map-explorer": "2.5.0",
     "storybook-react-router": "1.0.8",
-    "typescript": "4.0.3"
+    "typescript": "4.0.3",
+    "web-vitals": "0.2.4"
   },
   "dependencies": {
     "@ant-design/icons": "4.2.2",
@@ -89,8 +90,8 @@
     "i18next-xhr-backend": "3.2.2",
     "localforage": "1.9.0",
     "oaf-react-router": "2.1.1",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-i18next": "11.7.3",
     "react-promise-tracker": "2.1.0",
     "react-redux": "7.2.1",
@@ -107,7 +108,10 @@
     "typesafe-actions": "5.1.0"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "prettier": {
     "printWidth": 100,
