--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "start": "npm-run-all -p less:watch start-cra",
     "start-cra": "react-scripts start",
     "storybook": "npm-run-all -p storybook:start less:watch",
-    "storybook:start": "start-storybook -p 9009 -s public -c storybook --no-dll",
-    "storybook:build": "build-storybook -s public -c storybook --no-dll",
+    "storybook:start": "start-storybook -p 9009 -s public -c storybook",
+    "storybook:build": "build-storybook -s public -c storybook",
     "test": "react-scripts test"
   },
   "husky": {
