--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "eject": "react-scripts eject",
     "format": "prettier --write . --ignore-unknown",
     "format-check": "prettier --check . --ignore-unknown",
-    "extract-translations": "i18next-scanner",
+    "extract-translations": "i18next",
     "less:build": "lessc --js --rewrite-urls=all --include-path=node_modules src/app/styles/main.less src/app/styles/main.css",
     "less:watch": "yarn less:build && nodemon --ext less --exec 'yarn less:build'",
     "lint": "eslint . --ext .js,.ts,.tsx",
@@ -59,8 +59,7 @@
     "@types/react-router-dom": "5.1.8",
     "@types/redux-auth-wrapper": "2.0.10",
     "husky": "4.3.8",
-    "i18next-scanner": "3.0.0",
-    "i18next-scanner-typescript": "1.0.6",
+    "i18next-parser": "4.4.0",
     "less": "4.1.1",
     "lint-staged": "11.1.2",
     "nodemon": "2.0.12",
