--- a/package.json
+++ b/package.json
@@ -44,10 +44,21 @@
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@types/react-router-dom": "5.3.3",
+    "@typescript-eslint/eslint-plugin": "5.30.0",
+    "@typescript-eslint/parser": "5.30.0",
     "@vitejs/plugin-react": "1.3.2",
     "autoprefixer": "10.4.7",
+    "confusing-browser-globals": "1.0.11",
     "eslint": "8.18.0",
-    "eslint-config-canonical": "35.0.1",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-import-resolver-typescript": "3.1.1",
+    "eslint-plugin-eslint-comments": "3.2.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.6.0",
+    "eslint-plugin-react": "7.30.1",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-testing-library": "5.5.1",
+    "eslint-plugin-unicorn": "42.0.0",
     "husky": "8.0.1",
     "i18next-parser": "6.5.0",
     "jsdom": "20.0.0",
