--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "preview": "vite preview",
     "start": "vite",
     "test": "vitest",
+    "test:ui": "vitest --ui",
     "prepare": "husky install"
   },
   "lint-staged": {
@@ -40,20 +41,22 @@
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.3.0",
     "@testing-library/user-event": "14.2.1",
-    "@types/node": "18.0.0",
+    "@types/node": "18.0.1",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@types/react-router-dom": "5.3.3",
-    "@typescript-eslint/eslint-plugin": "5.30.0",
-    "@typescript-eslint/parser": "5.30.0",
+    "@typescript-eslint/eslint-plugin": "5.30.4",
+    "@typescript-eslint/parser": "5.30.4",
     "@vitejs/plugin-react": "1.3.2",
+    "@vitest/ui": "0.17.0",
     "autoprefixer": "10.4.7",
     "confusing-browser-globals": "1.0.11",
-    "eslint": "8.18.0",
+    "eslint": "8.19.0",
     "eslint-config-prettier": "8.5.0",
-    "eslint-import-resolver-typescript": "3.1.3",
+    "eslint-import-resolver-typescript": "3.2.0",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jest-dom": "4.0.2",
     "eslint-plugin-jsx-a11y": "6.6.0",
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-react-hooks": "4.6.0",
@@ -72,12 +75,12 @@
     "vite-plugin-checker": "0.4.7",
     "vite-plugin-svgr": "2.2.0",
     "vite-tsconfig-paths": "3.5.0",
-    "vitest": "0.16.0",
+    "vitest": "0.17.0",
     "vitest-fetch-mock": "0.1.0"
   },
   "dependencies": {
     "@ant-design/icons": "4.7.0",
-    "antd": "4.21.4",
+    "antd": "4.21.5",
     "classnames": "2.3.1",
     "history": "5.3.0",
     "i18next": "21.8.11",
