--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,9 @@
   publish = "dist/"
   command = "yarn build"
 
+[build.environment]
+  NODE_VERSION = "16"
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
