--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.3.0",
-    "@testing-library/user-event": "14.2.2",
+    "@testing-library/user-event": "14.2.5",
     "@types/node": "18.0.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
@@ -53,7 +53,7 @@
     "confusing-browser-globals": "1.0.11",
     "eslint": "8.19.0",
     "eslint-config-prettier": "8.5.0",
-    "eslint-import-resolver-typescript": "3.2.5",
+    "eslint-import-resolver-typescript": "3.2.6",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jest-dom": "4.0.2",
@@ -82,6 +82,7 @@
     "@ant-design/icons": "4.7.0",
     "antd": "4.21.6",
     "classnames": "2.3.1",
+    "dayjs": "1.11.3",
     "history": "5.3.0",
     "i18next": "21.8.14",
     "i18next-http-backend": "1.4.1",
@@ -96,6 +97,6 @@
     "recoil-nexus": "0.4.0",
     "recoil-persist": "4.2.0",
     "swr": "1.3.0",
-    "use-debounce": "8.0.1"
+    "use-debounce": "8.0.2"
   }
 }
