--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,13 @@
 root = true
 
 [*]
+charset = utf-8
+insert_final_newline = true
+end_of_line = lf
 indent_style = space
 indent_size = 2
-end_of_line = lf
-charset = utf-8
+max_line_length = 100
 trim_trailing_whitespace = true
-insert_final_newline = true
 
 [*.md]
 trim_trailing_whitespace = false
