--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,7 +20,7 @@ jobs:
           npm install
           npm run lint
           npm run format-check
-          npm test
+          npm run test
           npm run build
         env:
           CI: true
