--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+node_modules
 
 # production
-/dist
+dist
 
 # misc
 .DS_Store
