--- a/package.json
+++ b/package.json
@@ -38,11 +38,15 @@
       "prettier --write --ignore-unknown"
     ]
   },
+  "msw": {
+    "workerDirectory": "."
+  },
   "devDependencies": {
+    "@mswjs/data": "0.10.1",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.3.0",
     "@testing-library/user-event": "14.4.3",
-    "@types/node": "18.7.6",
+    "@types/node": "18.7.9",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@types/react-router-dom": "5.3.3",
@@ -52,6 +56,7 @@
     "@vitest/ui": "0.22.1",
     "autoprefixer": "10.4.8",
     "confusing-browser-globals": "1.0.11",
+    "cross-fetch": "3.1.5",
     "eslint": "8.22.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-import-resolver-typescript": "3.4.2",
@@ -68,20 +73,21 @@
     "jsdom": "20.0.0",
     "less": "4.1.3",
     "lint-staged": "13.0.3",
+    "mock-match-media": "0.3.0",
+    "msw": "0.45.0",
     "prettier": "2.7.1",
     "source-map-explorer": "2.5.2",
     "typescript": "4.7.4",
     "unplugin-moment-to-dayjs": "0.5.0",
-    "vite": "3.0.8",
+    "vite": "3.0.9",
     "vite-plugin-checker": "0.4.9",
     "vite-plugin-svgr": "2.2.1",
     "vite-tsconfig-paths": "3.5.0",
-    "vitest": "0.22.1",
-    "vitest-fetch-mock": "0.2.1"
+    "vitest": "0.22.1"
   },
   "dependencies": {
     "@ant-design/icons": "4.7.0",
-    "antd": "4.22.6",
+    "antd": "4.22.7",
     "classnames": "2.3.1",
     "dayjs": "1.11.5",
     "history": "5.3.0",
