--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
-    "@types/node": "18.7.23",
+    "@types/node": "18.8.0",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@types/react-router-dom": "5.3.3",
@@ -66,7 +66,7 @@
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.31.8",
     "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-testing-library": "5.7.1",
+    "eslint-plugin-testing-library": "5.7.2",
     "eslint-plugin-unicorn": "44.0.0",
     "husky": "8.0.1",
     "i18next-parser": "6.5.0",
@@ -77,7 +77,7 @@
     "msw": "0.47.3",
     "prettier": "2.7.1",
     "source-map-explorer": "2.5.3",
-    "typescript": "4.7.4",
+    "typescript": "4.8.4",
     "unplugin-moment-to-dayjs": "0.5.0",
     "vite": "3.1.4",
     "vite-plugin-checker": "0.5.1",
@@ -87,6 +87,8 @@
   },
   "dependencies": {
     "@ant-design/icons": "4.7.0",
+    "@tanstack/react-query": "4.9.0",
+    "@tanstack/react-query-devtools": "4.9.0",
     "antd": "4.23.4",
     "classnames": "2.3.2",
     "dayjs": "1.11.5",
@@ -103,7 +105,6 @@
     "recoil": "0.7.5",
     "recoil-nexus": "0.4.0",
     "recoil-persist": "4.2.0",
-    "swr": "1.3.0",
     "use-debounce": "8.0.4"
   }
 }
