--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "4.7.0",
+    "@sindresorhus/is": "5.3.0",
     "@tanstack/react-query": "4.10.1",
     "@tanstack/react-query-devtools": "4.10.1",
     "antd": "4.23.4",
