--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@mswjs/data": "0.11.0",
+    "@tanstack/eslint-plugin-query": "4.15.1",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
@@ -90,11 +91,11 @@
     "@sindresorhus/is": "5.3.0",
     "@tanstack/react-query": "4.16.1",
     "@tanstack/react-query-devtools": "4.16.1",
-    "antd": "4.24.2",
+    "antd": "4.24.3",
     "classnames": "2.3.2",
     "dayjs": "1.11.6",
     "history": "5.3.0",
-    "i18next": "22.0.5",
+    "i18next": "22.0.6",
     "i18next-http-backend": "2.0.1",
     "oaf-react-router": "3.0.1",
     "query-string": "7.1.1",
