--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "4.8.0",
+    "@lukemorales/query-key-factory": "1.0.3",
     "@sindresorhus/is": "5.3.0",
     "@tanstack/react-query": "4.16.1",
     "@tanstack/react-query-devtools": "4.16.1",
