--- a/package.json
+++ b/package.json
@@ -50,9 +50,8 @@
     "@types/node": "18.11.13",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
-    "@types/react-router-dom": "5.3.3",
-    "@typescript-eslint/eslint-plugin": "5.46.0",
-    "@typescript-eslint/parser": "5.46.0",
+    "@typescript-eslint/eslint-plugin": "5.46.1",
+    "@typescript-eslint/parser": "5.46.1",
     "@vitejs/plugin-react": "3.0.0",
     "@vitest/ui": "0.25.7",
     "autoprefixer": "10.4.13",
@@ -95,7 +94,6 @@
     "classnames": "2.3.2",
     "history": "5.3.0",
     "i18next": "22.4.3",
-    "i18next-http-backend": "2.1.0",
     "oaf-react-router": "3.0.1",
     "query-string": "7.1.3",
     "react": "18.2.0",
@@ -106,6 +104,7 @@
     "recoil": "0.7.6",
     "recoil-nexus": "0.4.0",
     "recoil-persist": "4.2.0",
-    "use-debounce": "9.0.2"
+    "use-debounce": "9.0.2",
+    "use-react-router-breadcrumbs": "4.0.1"
   }
 }
