--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,7 +17,7 @@ jobs:
           check-latest: true
           cache: 'npm'
       - run: |
-          npm install
+          npm ci
           npm run lint
           npm run format-check
           npm run test
