--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 node_modules
+
+# testing
+/coverage
 
 # production
 dist
 
 # misc
 .DS_Store
+Thumbs.db
 *.local
 
 # logs
