--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-testing-library": "5.10.0",
     "eslint-plugin-unicorn": "45.0.2",
+    "headers-polyfill": "3.1.2",
     "husky": "8.0.3",
     "i18next-parser": "7.6.0",
     "jsdom": "21.1.0",
