--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "jsdom": "21.1.0",
     "lint-staged": "13.1.1",
     "mock-match-media": "0.4.2",
-    "msw": "1.0.0",
+    "msw": "1.0.1",
     "prettier": "2.8.4",
     "source-map-explorer": "2.5.3",
     "typescript": "4.9.5",
@@ -104,6 +104,8 @@
     "recoil-nexus": "0.4.0",
     "recoil-persist": "4.2.0",
     "use-debounce": "9.0.3",
-    "use-react-router-breadcrumbs": "4.0.1"
+    "use-react-router-breadcrumbs": "4.0.1",
+    "zod": "3.20.6",
+    "zod-fetch": "0.1.0"
   }
 }
