--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@vitest/ui": "0.28.4",
     "confusing-browser-globals": "1.0.11",
     "cross-fetch": "3.1.5",
-    "eslint": "8.33.0",
+    "eslint": "8.34.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-import-resolver-typescript": "3.5.3",
     "eslint-plugin-eslint-comments": "3.2.0",
@@ -91,6 +91,7 @@
     "@sindresorhus/is": "5.3.0",
     "@tanstack/react-query": "4.24.4",
     "@tanstack/react-query-devtools": "4.24.4",
+    "@tshttp/status": "2.0.0",
     "antd": "5.2.0",
     "deepmerge-ts": "4.3.0",
     "i18next": "22.4.9",
