--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "format": "prettier --write . --ignore-unknown",
     "format-check": "prettier --check . --ignore-unknown",
     "extract-translations": "i18next",
-    "lint": "eslint \"./**/*.{js,ts,tsx}\" --max-warnings 0 --cache",
+    "lint": "eslint \"./**/*.{js,ts,tsx}\" --max-warnings 0",
     "preview": "vite preview",
     "start": "vite",
     "test": "vitest",
@@ -32,7 +32,7 @@
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
-      "eslint --fix --cache"
+      "eslint --fix"
     ],
     "**/*": [
       "prettier --write --ignore-unknown"
@@ -45,17 +45,17 @@
     "@emotion/babel-plugin": "11.10.5",
     "@emotion/eslint-plugin": "11.10.0",
     "@mswjs/data": "0.11.2",
-    "@tanstack/eslint-plugin-query": "4.24.5",
+    "@tanstack/eslint-plugin-query": "4.24.7",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
     "@types/node": "18.13.0",
-    "@types/react": "18.0.27",
+    "@types/react": "18.0.28",
     "@types/react-dom": "18.0.10",
-    "@typescript-eslint/eslint-plugin": "5.51.0",
-    "@typescript-eslint/parser": "5.51.0",
+    "@typescript-eslint/eslint-plugin": "5.52.0",
+    "@typescript-eslint/parser": "5.52.0",
     "@vitejs/plugin-react": "3.1.0",
-    "@vitest/ui": "0.28.4",
+    "@vitest/ui": "0.28.5",
     "confusing-browser-globals": "1.0.11",
     "cross-fetch": "3.1.5",
     "eslint": "8.34.0",
@@ -73,7 +73,7 @@
     "husky": "8.0.3",
     "i18next-parser": "7.6.0",
     "jsdom": "21.1.0",
-    "lint-staged": "13.1.1",
+    "lint-staged": "13.1.2",
     "mock-match-media": "0.4.2",
     "msw": "1.0.1",
     "prettier": "2.8.4",
@@ -83,16 +83,16 @@
     "vite-plugin-checker": "0.5.5",
     "vite-plugin-svgr": "2.4.0",
     "vite-tsconfig-paths": "4.0.5",
-    "vitest": "0.28.4"
+    "vitest": "0.28.5"
   },
   "dependencies": {
     "@ant-design/icons": "5.0.1",
     "@emotion/react": "11.10.5",
     "@sindresorhus/is": "5.3.0",
-    "@tanstack/react-query": "4.24.4",
-    "@tanstack/react-query-devtools": "4.24.4",
+    "@tanstack/react-query": "4.24.6",
+    "@tanstack/react-query-devtools": "4.24.6",
     "@tshttp/status": "2.0.0",
-    "antd": "5.2.0",
+    "antd": "5.2.1",
     "deepmerge-ts": "4.3.0",
     "i18next": "22.4.9",
     "query-string": "8.1.0",
