--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "antd": "5.2.2",
     "deepmerge-ts": "4.3.0",
     "i18next": "22.4.10",
+    "i18next-browser-languagedetector": "7.0.1",
     "query-string": "8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
