--- a/package.json
+++ b/package.json
@@ -46,12 +46,12 @@
     "@emotion/eslint-plugin": "11.10.0",
     "@julr/vite-plugin-validate-env": "0.2.2",
     "@mswjs/data": "0.11.2",
-    "@tanstack/eslint-plugin-query": "4.24.8",
+    "@tanstack/eslint-plugin-query": "4.24.11",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
     "@total-typescript/ts-reset": "0.3.7",
-    "@types/node": "18.14.0",
+    "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@typescript-eslint/eslint-plugin": "5.53.0",
@@ -95,6 +95,7 @@
     "@tanstack/react-query-devtools": "4.24.10",
     "@tshttp/status": "2.0.0",
     "antd": "5.2.2",
+    "dayjs": "1.11.7",
     "deepmerge-ts": "4.3.0",
     "i18next": "22.4.10",
     "i18next-browser-languagedetector": "7.0.1",
