--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-testing-library": "5.10.2",
     "eslint-plugin-unicorn": "46.0.0",
+    "eslint-plugin-vitest": "0.0.54",
     "headers-polyfill": "3.1.2",
     "husky": "8.0.3",
     "i18next-parser": "7.7.0",
