--- a/package.json
+++ b/package.json
@@ -54,13 +54,13 @@
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "@typescript-eslint/eslint-plugin": "5.55.0",
-    "@typescript-eslint/parser": "5.55.0",
+    "@typescript-eslint/eslint-plugin": "5.56.0",
+    "@typescript-eslint/parser": "5.56.0",
     "@vitejs/plugin-react": "3.1.0",
-    "@vitest/ui": "0.29.3",
+    "@vitest/ui": "0.29.5",
     "confusing-browser-globals": "1.0.11",
     "eslint": "8.36.0",
-    "eslint-config-prettier": "8.7.0",
+    "eslint-config-prettier": "8.8.0",
     "eslint-import-resolver-typescript": "3.5.3",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-import": "2.27.5",
@@ -77,26 +77,27 @@
     "jsdom": "21.1.1",
     "lint-staged": "13.2.0",
     "mock-match-media": "0.4.2",
-    "msw": "1.1.0",
-    "prettier": "2.8.4",
+    "msw": "1.1.1",
+    "prettier": "2.8.5",
     "source-map-explorer": "2.5.3",
     "typescript": "4.9.5",
-    "vite": "4.2.0",
+    "vite": "4.2.1",
     "vite-plugin-checker": "0.5.6",
+    "vite-plugin-react-click-to-component": "2.0.0",
     "vite-plugin-svgr": "2.4.0",
     "vite-tsconfig-paths": "4.0.7",
-    "vitest": "0.29.3"
+    "vitest": "0.29.5"
   },
   "dependencies": {
     "@ant-design/icons": "5.0.1",
     "@emotion/react": "11.10.6",
     "@sindresorhus/is": "5.3.0",
-    "@tanstack/react-query": "4.27.0",
-    "@tanstack/react-query-devtools": "4.27.0",
+    "@tanstack/react-query": "4.28.0",
+    "@tanstack/react-query-devtools": "4.28.0",
     "@tshttp/status": "2.0.0",
-    "antd": "5.3.1",
+    "antd": "5.3.2",
     "dayjs": "1.11.7",
-    "deepmerge-ts": "4.3.0",
+    "deepmerge-ts": "5.0.0",
     "i18next": "22.4.12",
     "i18next-browser-languagedetector": "7.0.1",
     "query-string": "8.1.0",
