Upgrade to Typescript 5

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,13 +6,12 @@
     "allowUnreachableCode": false,
     "baseUrl": "src",
     "esModuleInterop": false,
-    "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "jsx": "react-jsx",
     "jsxImportSource": "@emotion/react",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "Node", // TODO use "bundler"
     "noEmit": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
