--- a/tsconfig.vite.json
+++ b/tsconfig.vite.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "composite": true,
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "Node", // TODO use "bundler"
     "allowSyntheticDefaultImports": true
   },
   "include": ["vite.config.ts"]
