Fix StrictMode warning

--- a/package.json
+++ b/package.json
@@ -71,7 +71,6 @@
     "eslint-plugin-testing-library": "5.11.0",
     "eslint-plugin-unicorn": "47.0.0",
     "eslint-plugin-vitest": "0.2.2",
-    "headers-polyfill": "3.1.2",
     "husky": "8.0.3",
     "i18next-parser": "8.0.0",
     "jsdom": "22.0.0",
@@ -101,6 +100,7 @@
     "i18next": "22.4.15",
     "i18next-browser-languagedetector": "7.0.1",
     "query-string": "8.1.0",
+    "rc-menu": "9.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "4.0.4",
