--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "bugs": {
     "url": "https://github.com/Kamahl19/react-starter/issues"
   },
+  "type": "module",
   "engines": {
     "node": ">=18.0",
     "npm": ">=8.0"
@@ -23,7 +24,7 @@
     "format": "prettier --write . --ignore-unknown",
     "format-check": "prettier --check . --ignore-unknown",
     "i18n": "i18next",
-    "lint": "eslint \"./**/*.{js,ts,tsx}\" --max-warnings 0",
+    "lint": "eslint \"./**/*.{js,cjs,mjs,ts,tsx}\" --max-warnings 0",
     "preview": "vite preview",
     "start": "vite",
     "test": "vitest",
@@ -31,7 +32,7 @@
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.{js,ts,tsx}": [
+    "*.{js,cjs,mjs,ts,tsx}": [
       "eslint --fix"
     ],
     "**/*": [
@@ -45,7 +46,7 @@
     "@emotion/babel-plugin": "11.11.0",
     "@emotion/eslint-plugin": "11.11.0",
     "@julr/vite-plugin-validate-env": "0.2.2",
-    "@mswjs/data": "0.12.0",
+    "@mswjs/data": "0.13.0",
     "@tanstack/eslint-plugin-query": "4.29.9",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
@@ -53,8 +54,8 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
-    "@typescript-eslint/eslint-plugin": "5.59.8",
-    "@typescript-eslint/parser": "5.59.8",
+    "@typescript-eslint/eslint-plugin": "5.59.9",
+    "@typescript-eslint/parser": "5.59.9",
     "@vitejs/plugin-react": "4.0.0",
     "@vitest/ui": "0.31.4",
     "confusing-browser-globals": "1.0.11",
@@ -63,7 +64,7 @@
     "eslint-import-resolver-typescript": "3.5.5",
     "eslint-plugin-eslint-comments": "3.2.0",
     "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jest-dom": "5.0.0",
+    "eslint-plugin-jest-dom": "5.0.1",
     "eslint-plugin-jsx-a11y": "6.7.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
@@ -73,8 +74,8 @@
     "husky": "8.0.3",
     "i18next-parser": "8.0.0",
     "jsdom": "22.1.0",
+    "jsdom-testing-mocks": "1.9.0",
     "lint-staged": "13.2.2",
-    "mock-match-media": "0.4.2",
     "msw": "1.2.1",
     "prettier": "2.8.8",
     "rollup-plugin-visualizer": "5.9.0",
@@ -95,10 +96,10 @@
     "@tanstack/react-query": "4.29.12",
     "@tanstack/react-query-devtools": "4.29.12",
     "@tshttp/status": "2.0.0",
-    "antd": "5.5.2",
+    "antd": "5.6.0",
     "dayjs": "1.11.8",
     "deepmerge-ts": "5.1.0",
-    "i18next": "22.5.0",
+    "i18next": "22.5.1",
     "i18next-browser-languagedetector": "7.0.2",
     "query-string": "8.1.0",
     "react": "18.2.0",
