--- a/package.json
+++ b/package.json
@@ -43,10 +43,10 @@
     "workerDirectory": "public"
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "11.11.0",
     "@emotion/eslint-plugin": "11.11.0",
     "@julr/vite-plugin-validate-env": "0.2.2",
     "@mswjs/data": "0.13.0",
+    "@swc/plugin-emotion": "2.5.68",
     "@tanstack/eslint-plugin-query": "4.29.9",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
@@ -56,7 +56,7 @@
     "@types/react-dom": "18.2.6",
     "@typescript-eslint/eslint-plugin": "5.60.0",
     "@typescript-eslint/parser": "5.60.0",
-    "@vitejs/plugin-react": "4.0.1",
+    "@vitejs/plugin-react-swc": "3.3.2",
     "@vitest/ui": "0.31.4",
     "confusing-browser-globals": "1.0.11",
     "eslint": "8.43.0",
