--- a/package.json
+++ b/package.json
@@ -45,21 +45,21 @@
   "devDependencies": {
     "@emotion/eslint-plugin": "11.11.0",
     "@julr/vite-plugin-validate-env": "0.2.4",
-    "@mswjs/data": "github:noveogroup-amorgunov/mswjs-data#feat-persist",
-    "@swc/plugin-emotion": "2.5.68",
+    "@mswjs/data": "github:noveogroup-amorgunov/mswjs-data#feat-persist-extension",
+    "@swc/plugin-emotion": "2.5.69",
     "@tanstack/eslint-plugin-query": "4.29.9",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
     "@total-typescript/ts-reset": "0.4.2",
-    "@types/node": "20.3.2",
+    "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
-    "@typescript-eslint/eslint-plugin": "5.60.1",
-    "@typescript-eslint/parser": "5.60.1",
+    "@typescript-eslint/eslint-plugin": "6.0.0",
+    "@typescript-eslint/parser": "6.0.0",
     "@vitejs/plugin-react-swc": "3.3.2",
     "@vitest/ui": "0.31.4",
     "confusing-browser-globals": "1.0.11",
-    "eslint": "8.43.0",
+    "eslint": "8.44.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-import-resolver-typescript": "3.5.5",
     "eslint-plugin-eslint-comments": "3.2.0",
@@ -72,16 +72,16 @@
     "eslint-plugin-unicorn": "47.0.0",
     "eslint-plugin-vitest": "0.2.6",
     "husky": "8.0.3",
-    "i18next-parser": "8.0.0",
+    "i18next-parser": "8.2.0",
     "jsdom": "22.1.0",
     "jsdom-testing-mocks": "1.9.0",
     "lint-staged": "13.2.3",
     "msw": "1.2.2",
-    "prettier": "2.8.8",
+    "prettier": "3.0.0",
     "rollup-plugin-visualizer": "5.9.2",
     "source-map-explorer": "2.5.3",
     "typescript": "5.1.6",
-    "vite": "4.3.9",
+    "vite": "4.4.3",
     "vite-plugin-checker": "0.6.1",
     "vite-plugin-react-click-to-component": "2.0.0",
     "vite-plugin-svgr": "3.2.0",
@@ -96,20 +96,20 @@
     "@tanstack/react-query": "4.29.19",
     "@tanstack/react-query-devtools": "4.29.19",
     "@tshttp/status": "2.0.0",
-    "antd": "5.6.3",
-    "dayjs": "1.11.8",
+    "antd": "5.7.0",
+    "dayjs": "1.11.9",
     "deepmerge-ts": "5.1.0",
-    "i18next": "23.2.6",
+    "i18next": "23.2.10",
     "i18next-browser-languagedetector": "7.1.0",
     "query-string": "8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "4.0.10",
-    "react-i18next": "13.0.1",
+    "react-i18next": "13.0.2",
     "react-router-dom": "6.14.1",
     "recoil": "0.7.7",
     "recoil-nexus": "0.5.0",
-    "recoil-persist": "5.0.1",
+    "recoil-persist": "5.1.0",
     "use-debounce": "9.0.4",
     "use-query-params": "2.2.1",
     "use-react-router-breadcrumbs": "4.0.1",
