--- a/package.json
+++ b/package.json
@@ -23,6 +23,15 @@
     "prepare": "husky install",
     "preview": "vite build && vite preview --port 3000",
     "start": "vite",
+    "supabase:db:diff": "supabase db diff --use-migra",
+    "supabase:db:reset": "supabase db reset",
+    "supabase:gen-types": "supabase gen types typescript --local > src/api/database.types.ts && better-supabase-types -i src/api/database.types.ts -f -s",
+    "supabase:login": "supabase login",
+    "supabase:migration:up": "supabase migration up",
+    "supabase:open:dashboard": "open-cli http://localhost:54323",
+    "supabase:open:email": "open-cli http://localhost:54324",
+    "supabase:start": "supabase start",
+    "supabase:stop": "supabase stop",
     "test": "DEBUG_PRINT_LIMIT=100000 vitest",
     "test:ui": "DEBUG_PRINT_LIMIT=100000 vitest --ui",
     "visualize": "export VISUALIZE=true && npm run build"
@@ -38,7 +47,7 @@
   "dependencies": {
     "@ant-design/icons": "5.2.6",
     "@emotion/react": "11.11.1",
-    "@reflet/http": "1.0.0",
+    "@supabase/supabase-js": "2.36.0",
     "@tanstack/react-query": "5.10.0",
     "@tanstack/react-query-devtools": "5.10.0",
     "antd": "5.11.5",
@@ -54,11 +63,9 @@
     "react-error-boundary": "4.0.11",
     "react-i18next": "13.5.0",
     "react-router-dom": "6.20.0",
-    "use-debounce": "10.0.0",
     "use-query-params": "2.2.1",
     "use-react-router-breadcrumbs": "4.0.1",
-    "zod": "3.22.4",
-    "zod-fetch": "0.1.1"
+    "zod": "3.22.4"
   },
   "devDependencies": {
     "@emotion/eslint-plugin": "11.11.0",
@@ -81,6 +88,7 @@
     "@typescript-eslint/parser": "6.13.1",
     "@vitejs/plugin-react-swc": "3.5.0",
     "@vitest/ui": "0.34.6",
+    "better-supabase-types": "2.6.1",
     "eslint": "8.54.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-import-resolver-typescript": "3.6.1",
@@ -99,10 +107,12 @@
     "jsdom": "23.0.1",
     "jsdom-testing-mocks": "1.11.0",
     "lint-staged": "15.1.0",
+    "open-cli": "7.2.0",
     "prettier": "3.1.0",
     "prettier-plugin-packagejson": "2.4.6",
     "rollup-plugin-visualizer": "5.9.3",
     "source-map-explorer": "2.5.3",
+    "supabase": "1.99.5",
     "terser": "5.24.0",
     "typescript": "5.2.2",
     "vite": "5.0.4",
